Some refactoring (also completes get-machine-info)

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "machineDir": "machines/",
     "machines": [
       "list-machinepacks",
-      "get-machinepack-details"
+      "get-machine-info",
+      "get-machinepack-info"
     ]
   }
 }
