--- a/package.json
+++ b/package.json
@@ -15,7 +15,12 @@
   "license": "MIT",
   "dependencies": {
     "machine": "^1.1.0",
-    "machinepack-http": "^0.2.3"
+    "machinepack-http": "^0.2.3",
+    "enpeem": "^1.0.0",
+    "machinepack-npm": "^0.3.1",
+    "lodash": "^2.4.1",
+    "machinepack-machines": "^1.1.1",
+    "async": "^0.9.0"
   },
   "devDependencies": {
     "mocha": "^2.1.0"
@@ -26,7 +31,8 @@
     "machines": [
       "list-machinepacks",
       "get-machine-info",
-      "get-machinepack-info"
+      "get-machinepack-info",
+      "download-machinepack"
     ]
   }
 }
