--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "machinepack-nodemachine.org",
+  "name": "machinepack-registry",
   "version": "0.1.0",
   "description": "Node.js API wrapper for the public machine registry hosted at http://node-machine.org.",
   "scripts": {
@@ -26,7 +26,7 @@
     "mocha": "^2.1.0"
   },
   "machinepack": {
-    "friendlyName": "NodeMachine.org",
+    "friendlyName": "Machine Registry",
     "machineDir": "machines/",
     "machines": [
       "list-machinepacks",
