--- a/package.json
+++ b/package.json
@@ -14,17 +14,17 @@
   "author": "Mike McNeil <michael.r.mcneil@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "machine": "^4.0.0",
-    "machinepack-http": "^2.0.1",
-    "enpeem": "^1.0.0",
-    "machinepack-npm": "^3.0.0",
-    "lodash": "^2.4.1",
-    "machinepack-machines": "^3.0.6",
     "async": "^0.9.0",
-    "machinepack-fs": "^1.6.2"
+    "enpeem": "^1.0.0",
+    "lodash": "^2.4.1",
+    "machine": "^9.0.3",
+    "machinepack-fs": "^1.6.2",
+    "machinepack-http": "^2.0.1",
+    "machinepack-machines": "^3.0.6",
+    "machinepack-npm": "^3.0.0"
   },
   "devDependencies": {
-    "test-machinepack-mocha": "^0.2.2"
+    "test-machinepack-mocha": "^1.0.0"
   },
   "repository": {
     "url": "git://github.com/mikermcneil/machinepack-registry.git"
